--- a/style.css
+++ b/style.css
@@ -1,28 +1,29 @@
-html, body {
+html {
   height: 100%;
   width: 100%;
-  background-color: #000000;
-  (background-color: #e4e2e2;)
 }
 
-h1, h2, h3, p {
-  font-family: sans-serif;
-  font-size: 24px;
-  color: #ffffff;
-  text-align: center;
+body {
+  background-color: black;
 }
 
-h2 {font-size: 20px;}
-h3 {font-size: 18px;}
-p {font-size: 15px;}
-a {color: #0000FF}
-
-
-
-img{
+img {
   display: block;
   margin-left: auto;
   margin-right: auto;
-  width: 50%;
+  width: 40%;
+  outline: 3px solid blue
 
 }
+
+h1, h2 {
+  color: blue;
+  text-align: center;
+  
+}
+
+a { color: blue;
+  text-align: center;
+  outline: 3px solid blue;
+  margin: 0 10px;
+  }
