--- a/style.css
+++ b/style.css
@@ -12,7 +12,8 @@ img {
   margin-left: auto;
   margin-right: auto;
   width: 40%;
-  outline: 3px solid blue
+  outline: 3px solid blue;
+  border-radius: 50%;
 
 }
 
